docroot/themes/custom/transac/alshaya_white_label/conditional-sass/super-category/component/_supercategory-header.scss
.super-category-enabled {
  header {
    .region__header .block-views-exposed-filter-blocksearch-page {
      top: 0.5rem;

      @include breakpoint($upto-desktop) {
        z-index: 8;
        bottom: auto;
        top: 5.3125rem;
        position: absolute;
      }

      @include breakpoint($only-mobile) {
        position: fixed;
      }

      html[lang="ar"] & {
        @include breakpoint($upto-tablet) {
          top: 5.3rem;
        }
      }
    }

    .block-cart-mini-block .cart-link,
    .block-alshaya-react-mini-cart .cart-link {
      @include breakpoint($upto-desktop) {
        display: block;
        margin: 0;
        text-align: center;
        width: 100%;
        height: 2.5rem;
        background-size: 2.125rem;
        background-position: center;

        html[lang="ar"] & {
          margin-top: 0;
        }
      }

      @include breakpoint($only-mobile) {
        height: 2.625rem;
      }
    }

    .c-header__region {
      @include breakpoint($upto-desktop) {
        margin: 0;
        padding-bottom: 0;
        height: auto;

        html[lang="ar"] & {
          height: auto !important;
        }
      }

      @include breakpoint($desktop) {
        padding-top: rem(24);
        padding-bottom: rem(43);
      }
    }

    .views-exposed-form-search-page {
      @include breakpoint($upto-desktop) {
        width: 100%;
        border: 0.5rem solid $header_search_border_mobile;
      }
    }

    #mini-cart-wrapper {
      @include breakpoint($upto-desktop) {
        float: none;
        margin: 0;
      }

      @include breakpoint($desktop) {
        height: rem(24);
      }
    }
  }

  @include breakpoint($desktop) {
    .header--wrapper {
      background: $header_super_category_enabled_bg;
    }
  }

  .c-menu-primary {
    .region__menu-primary {
      background: $header_super_category_enabled_bg;
    }
  }

  .c-menu-secondary {
    @include breakpoint($desktop) {
      background: $header_super_category_enabled_bg;
    }
  }

  @include breakpoint($upto-desktop) {
    .menu--active .mobile--close,
    .logged-in .mobile--close,
    .mobile--close {
      top: 3.9rem !important;
    }

    .menu--active .toggle--sign,
    .logged-in .toggle--sign,
    .toggle--sign {
      top: rem(60) !important;
    }

    .main--menu {
      top: 5.625rem;
      z-index: 15;

      ul {
        width: 100%;
      }
    }

    .main--menu ul.menu--one__list,
    .c-menu-secondary {
      top: 6.7rem;
    }

    .main--menu ul.menu--one__list {
      padding-bottom: 6.0625rem;
    }

    .menu__list-item,
    .back--link {
      a {
        padding-bottom: 0.875rem;
      }
    }

    .menu__back {
      height: 0.8125rem;
    }

    .toggle--sign {
      .one,
      .one.shop {
        padding-top: 1.1rem;
        padding-bottom: 1.1rem;
      }

      .one {
        align-items: center;
        display: inline-flex;
        justify-content: center;
        width: 50.5%;
        padding: 1.1rem 0.5rem;
        height: rem(60);
      }

      .one.shop {
        align-items: center;
        display: inline-flex;
        justify-content: center;
        width: 49.5%;
      }
    }

    & {
      margin-top: rem(114);

      @include breakpoint($only-tablet) {
        margin-top: 5.4375rem;
      }

      &:not(.no-sticky-algolia-search-bar) {
        .branding__menu {
          box-shadow: none;
        }
      }

      html[lang="ar"] & {
        margin-top: rem(114);

        @include breakpoint($only-tablet) {
          margin-top: 5.4375rem;
        }
      }
    }

    .block-alshaya-super-category-menu {
      position: absolute;
      width: 100%;
      top: 0;
      z-index: 10;

      @include breakpoint($only-mobile) {
        position: fixed;
      }
    }

    .menu--mobile-navigation {
      width: 75%;
      top: 2.875rem;
      background-color: $header_mobile_menu_bg;
    }

    .block-cart-mini-block,
    .block-alshaya-react-mini-cart {
      #{$right}: 0;
      z-index: 1;
      text-align: center;
    }

    .mobile--close {
      .menu--active & {
        #{$left}: 20rem;
      }

      top: 3.9rem;
      height: 2.8125rem;
      width: 2.8125rem;
      padding-top: 0.5rem;
    }

    .c-menu-secondary,
    .toggle--sign,
    .main--menu ul.menu--one__list {
      width: 20rem;
    }
  }

  .c-menu-secondary,
  .toggle--sign,
  .main--menu ul.menu--one__list {
    @include breakpoint($only-mobile) {
      width: calc(100% - 2.8125rem);
      top: rem(120);
    }
  }

  .toggle--sign {
    .shop,
    .account {
      @include breakpoint($only-tablet) {
        html[lang="ar"] & {
          padding: 0 0.25rem;
          display: inline-flex;
          align-items: center;
          justify-content: center;
        }
      }
    }
  }

  .c-my-account-nav {
    @include breakpoint($only-mobile) {
      width: calc(100% - 2.8125rem) !important;
    }

    @include breakpoint($upto-desktop) {
      top: rem(120);
    }

    li::after {
      @include breakpoint($upto-desktop) {
        #{$right}: -0.1875rem;
      }
    }
  }

  .menu--active .mobile--close {
    top: 3.9rem;

    @include breakpoint($only-mobile) {
      #{$left}: calc(100% - 2.8125rem);
    }
  }

  .branding__menu {
    @include breakpoint($upto-desktop) {
      height: auto;
    }

    @include breakpoint($only-tablet) {
      height: 0;
    }

    .c-header__region .block-system-branding-block {
      .site-brand-home {
        @include breakpoint($upto-desktop) {
          display: none;
        }

        picture {
          display: flex;
        }

        img {
          @include breakpoint($desktop) {
            height: rem(28);
            max-width: 18.75rem;
            margin: auto;
            text-align: center;
            width: auto;
          }
        }
      }
    }

    &.navbar-fixed-top {
      @include breakpoint($upto-desktop) {
        position: static;
      }
    }
  }

  .mobile--overlay {
    .c-menu-primary .region__menu-primary .menu--mobile-navigation {
      z-index: 5;
    }

    #block-cartminiblock,
    .block-alshaya-react-mini-cart {
      z-index: 4;
    }
  }

  &.wishlist-enabled {
    #wishlist-header-wrapper {
      @include breakpoint($upto-desktop) {
        top: 5rem;
        #{$right}: 2.5rem;
      }

      @include breakpoint($only-tablet) {
        top: 4.25rem;
      }
    }
  }

  /*
        SITE HEADER - MOBILE VIEW
    */
  header.c-header {
    .region__header > div {
      @include breakpoint($only-tablet) {
        width: auto;
      }
    }

    .block-cart-mini-block,
    .block-alshaya-react-mini-cart {
      .acq-mini-cart {
        .cart-link {
          @include breakpoint($only-tablet) {
            margin-top: 0;
            margin-#{$left}: 0;
          }

          .quantity {
            @include breakpoint($only-tablet) {
              top: 0.188rem;
            }
          }
        }
      }
    }

    .c-header__region {
      @include breakpoint($upto-desktop) {
        height: auto;
      }
    }
  }

  .c-menu-primary {
    .mobile--menu {
      @include breakpoint($upto-desktop) {
        top: rem(24);
      }

      @include breakpoint($only-tablet) {
        top: rem(19);
      }
    }
  }

  .menu--active {
    .mobile--close {
      @include breakpoint($only-tablet) {
        #{$left}: 20rem;
      }

      span {
        @include icon(close) {
          top: 0;
          #{$left}: 0;
        }
      }
    }
  }

  .block-alshaya-algolia-react-autocomplete {
    html[lang="ar"] & {
      @include breakpoint($only-mobile) {
        top: 6.725rem;
      }
    }

    #alshaya-algolia-autocomplete {
      @include breakpoint($desktop) {
        width: 18.75rem;
        padding: 0;
      }

      .react-autosuggest__input {
        @include breakpoint($only-tablet) {
          height: 3.124rem;
        }
      }
    }
  }

  .block-system-branding-block {
    .site-brand-home {
      @include breakpoint($desktop) {
        display: flex;
        margin: 0 auto;
        max-width: rem(350);
      }

      a {
        @include breakpoint($desktop) {
          align-items: center;
          display: inline-flex;
          height: rem(28);
          margin: auto;
          max-width: none;
          text-align: center;
          min-width: 4.625rem;
        }
      }
    }
  }

  &.menu--open {
    #block-alshayaalgoliareactautocomplete {
      @include breakpoint($upto-desktop) {
        visibility: hidden !important;
      }
    }
  }

  .filter-fixed-top {
    .sticky-filter-wrapper {
      .site-brand-home {
        a {
          @include breakpoint($desktop) {
            width: 10rem;
          }
        }

        picture {
          display: inline-flex;
        }
      }
    }
  }

  &.path--cart {
    .spc-pre-content-sticky {
      @include breakpoint($upto-desktop) {
        margin-top: 1.5rem;
      }
    }
  }

  .block-system-breadcrumb-block {
    @include breakpoint($only-tablet) {
      position: relative;
      top: 2rem;
    }
  }

  &.magazine-layout-v2 {
    &.nodetype--acq_product {
      @include breakpoint($only-mobile) {
        margin-top: 2rem;

        .block-alshaya-super-category-menu,
        .menu--mobile-navigation {
          display: none;
        }

        &:not(.frontpage) {
          .page-standard {
            &.l-container {
              margin-top: 0;
            }
          }
        }
      }
    }
  }
}

html[lang=ar] {
  .super-category-enabled {
    &.super-category-american-eagle {
      .branding__menu {
        .c-header__region {
          .block-system-branding-block {
            .site-brand-home {
              img {
                height: rem(42);
              }
            }
          }
        }
      }
    }

    header {
      .c-header__region {
        @include breakpoint($desktop) {
          padding-bottom: rem(43);
        }
      }
    }
  }
}

body {
  &.super-category-enabled {
    .block-alshaya-algolia-react-autocomplete {
      &.focused {
        .algolia-search-back-icon {
          @include breakpoint($only-tablet) {
            @include icon(arrow-#{$left}) {
              bottom: 0;
              margin: auto;
              top: 0;
            }
          }
        }
      }
    }

    &.aura-enabled {
      .main--menu ul.menu--one__list,
      .c-menu-secondary {
        @include breakpoint($upto-desktop) {
          top: rem(120);
        }
      }

      .c-my-account-nav {
        @include breakpoint($upto-desktop) {
          top: rem(120);
        }
      }
    }
  }
}

