CORE-42824: Fixed misalignment of header icons b/w tablet and desktop (AEO).

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/super-category/component/_supercategory-header.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/super-category/component/_supercategory-header.scss
@@ -350,8 +350,13 @@
       .acq-mini-cart {
         .cart-link {
           @include breakpoint($only-tablet) {
-            margin-top: 0;
+            margin-top: rem(2);
+            margin-bottom: rem(0);
             margin-#{$left}: 0;
+
+            html[lang='ar'] & {
+              margin-bottom: 0;
+            }
           }
 
           .quantity {
